Fixed timeline images on mobile & uploaded new resume
Hopefully fixed the mobile issues in the timeline. Just added media queries for when the screen gets too small. Should work but we will see.

Also replaced my resume with the new one built today. Should be the best it has been yet.

--- a/css/creative.css
+++ b/css/creative.css
@@ -108,7 +108,7 @@ aside {
 
 @media (max-width: 1200px){
   .timelineImg {
-	margin-left: -110px;
+	width: 410px;
 	padding-bottom: 25px;
   }
 }
@@ -128,6 +128,25 @@ aside {
   .timelineImg {
 	margin-left: 0%;
 	padding-bottom: 25px;
+  }
+}
+
+@media (max-width: 500px){
+  .leftcolumn{
+		float: left;
+		width: 80%;
+  }
+  img{
+	  margin-left: 0px;
+  }
+  .rightcolumn{
+		float: none;
+  }
+  
+  .timelineImg {
+	width: 200px;
+	padding-bottom: 25px;
+	padding-top: 50%
   }
 }
 
